interpreter/tests/golden-files/lazy-syntax.golden.enzo
//= use of invocation in a storage context
error: cannot use `$` in assignment context
	$lazy-var: 0; // error: cannot use `$` in assignment context
error: cannot use `$` in rebind context
	$lazy-var2 <: 50; // error: cannot use `$` in rebind context
error: cannot use `$` in rebind context
	50 :> $lazy-var2; // error: cannot use `$` in rebind context